--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
         <div class="content">
           <p>
             <strong
-              >Untuk <span class="name-input">[masukkan nama]</span>, di hari
+              >Untuk Rivita</span>, di hari
               ulang tahunmu yang berbeda kali ini…</strong
             >
           </p>
@@ -705,11 +705,11 @@
 
           <p>
             Dan kamu pantas diberi pelukan hangat, oleh semesta, oleh
-            orang-orang yang mencintaimu… termasuk aku.
+            orang-orang yang mencintaimu… dan oleh dirimu sendiri.
           </p>
 
           <p>
-            Selamat ulang tahun, <span class="name-input">[nama dia]</span>.
+            Selamat ulang tahun Rivita,
             Terima kasih sudah tetap menjadi kamu yang penuh kasih, walau dunia
             kadang terasa berat. Terima kasih sudah berjalan sejauh ini,
             meskipun dengan air mata yang kadang diam-diam jatuh. Aku berharap
@@ -723,7 +723,7 @@
               >Kamu adalah hadiah, bukan hanya hari ini, tapi setiap hari kamu
               hadir di dunia ini.</span
             >
-            Dan aku bangga bisa mengenalmu, menyayangimu, dan melihat kamu
+            Dan aku bangga bisa mengenalmu dan melihat kamu
             tumbuh menjadi pribadi yang begitu dalam. Selamat bertambah usia.
             Jangan takut untuk bersedih… dan jangan lupa kamu berhak untuk
             bahagia.
