--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
             Dan aku bangga bisa mengenalmu dan melihat kamu
             tumbuh menjadi pribadi yang begitu dalam. Selamat bertambah usia.
             Jangan takut untuk bersedih… dan jangan lupa kamu berhak untuk
-            bahagia.
+            bahagia
           </p>
         </div>
 
